Removed the need for AOSharp.Recast nuget package

--- a/SharpNav.csproj
+++ b/SharpNav.csproj
@@ -37,30 +37,6 @@
     <Reference Include="AOSharp.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\AOSharpSDK.1.0.49\lib\net48\AOSharp.Core.dll</HintPath>
     </Reference>
-    <Reference Include="AOSharp.Recast, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\AOSharp.Recast.dll</HintPath>
-    </Reference>
-    <Reference Include="cai-nav, Version=0.4.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\cai-nav.dll</HintPath>
-    </Reference>
-    <Reference Include="cai-nav-rcn, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\cai-nav-rcn.dll</HintPath>
-    </Reference>
-    <Reference Include="cai-nmbuild, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\cai-nmbuild.dll</HintPath>
-    </Reference>
-    <Reference Include="cai-nmgen, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\cai-nmgen.dll</HintPath>
-    </Reference>
-    <Reference Include="cai-nmgen-rcn, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\cai-nmgen-rcn.dll</HintPath>
-    </Reference>
-    <Reference Include="cai-util, Version=0.5.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\cai-util.dll</HintPath>
-    </Reference>
-    <Reference Include="NavmeshMovementController, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\AOSharpSDK.Nav.1.0.5\lib\net48\NavmeshMovementController.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -70,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SharpNav.AOSharp\Terrain.cs" />
     <Compile Include="SharpNav.Lib\Area.cs" />
     <Compile Include="SharpNav.Lib\AreaGenerator.cs" />
     <Compile Include="SharpNav.Lib\Cell.cs" />
